# typeinfo-serialize-c

./: .gitignore  LICENSE  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: CMakeLists.txt
src/examples/: CMakeLists.txt  main.c
src/include/swamp-typeinfo-serialize/: deserialize.h  deserialize_internal.h  serialize.h  version.h
src/lib/: CMakeLists.txt  deserialize.c  deserialize_fixup.c  serialize.c
